--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
 body{
-    background-color: bisque"
+  background-color: bisque"
 }
 button{
-    background-color: #23a0c6; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  margin: auto;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+  background-color: #23a0c6; /* Green */
+border: none;
+color: white;
+padding: 50px 70px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 50px;
+}
+.container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid rgb(0, 187, 255);
+  height: 200px;
 }
