--- a/style.css
+++ b/style.css
@@ -13,6 +13,19 @@ button {
     font-size: 50px;
 }
 
+    button:hover {
+        background-color: #23a0c6;
+        border: none;
+        color: white;
+        padding: 50px 70px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 50px;
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    }
+
+
 .container {
     display: flex;
     align-items: center;
@@ -31,3 +44,26 @@ button {
     display: inline-block;
     font-size: 10px;
 }
+
+    .setlife:hover {
+        background-color: #3e9ab6;
+        color: white;
+        padding: 10px 30px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 10px;
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    }
+
+    .setlife:active {
+        background-color: #3e9ab6;
+        color: white;
+        padding: 10px 30px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 10px;
+        box-shadow: 0 5px #666;
+        transform: translateY(4px);
+    }
